Fixed minor UI issue in profile bar.
Container took up extra space in logged in state.

--- a/client/src/stylesheets/ProfileBar.css
+++ b/client/src/stylesheets/ProfileBar.css
@@ -22,6 +22,11 @@
   font-size: 20px;
 }
 
+.profileOptions .dropdown {
+  margin: 0px;
+  padding: 0px;
+}
+
 .profileOptions .dropdown-menu {
   background-color: #252525;
   height: fit-content;
